@@ -106,6 +106,11 @@
 			android:title="@string/pref_sector"
 			android:summary="@string/pref_sector_sum"
 			android:defaultValue="false"/>
+		<CheckBoxPreference
+			android:key="browser"
+			android:title="@string/pref_browser"
+			android:summary="@string/pref_browser_sum"
+			android:defaultValue="true"/>
 	</PreferenceCategory>
 
 	<PreferenceCategory android:title="@string/preftitle_input">
